@@ -6,7 +6,8 @@ import java.util.concurrent.TimeUnit;
 
 import javax.sql.DataSource;
 
-import org.apache.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.springframework.batch.core.StepContribution;
 import org.springframework.batch.core.scope.context.ChunkContext;
 import org.springframework.batch.core.step.tasklet.Tasklet;
@@ -24,7 +25,7 @@ import com.pennanttech.pennapps.pff.external.controldump.ControlDumpExtract;
 import com.pennanttech.pff.external.ControlDumpProcess;
 
 public class ControlDump implements Tasklet {
-	private Logger logger = Logger.getLogger(ControlDump.class);
+	private Logger logger = LogManager.getLogger(ControlDump.class);
 
 	private Date valueDate;
 	private Date appDate;
@@ -57,7 +58,7 @@ public class ControlDump implements Tasklet {
 
 			DataEngineStatus status = ControlDumpExtract.EXTRACT_STATUS;
 			status.setStatus("I");
-			new Thread(new ControlDumpProcessThread(Long.valueOf(1000))).start();
+			new Thread(new ControlDumpProcessThread(new Long(1000))).start();
 			Thread.sleep(1000);
 			BatchUtil.setExecutionStatus(context, status);
 
