@@ -31,11 +31,11 @@ public class TestImps {
 	@Test(enabled = false)
 	public void process() {
 		try {
-			DisbursemenIMPSRequestProcess impsRequest = new DisbursemenIMPSRequestProcess(dataSource,
-					Long.valueOf(1000), new Date(), new Date());
+			DisbursemenIMPSRequestProcess impsRequest = new DisbursemenIMPSRequestProcess(dataSource, new Long(1000),
+					new Date(), new Date());
 			List<String> list = new ArrayList<>();
 			list.add("175");
-			// impsRequest.setDisbursments(list);
+			//impsRequest.setDisbursments(list);
 			impsRequest.process("DISB_EXPORT_IMPS");
 		} catch (Exception e) {
 			e.printStackTrace();
