@@ -17,7 +17,9 @@ import java.util.List;
 
 import javax.sql.DataSource;
 
+import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.time.DateFormatUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -29,7 +31,9 @@ import com.aspose.words.SaveFormat;
 import com.pennant.app.constants.AccountEventConstants;
 import com.pennant.app.constants.CalculationConstants;
 import com.pennant.app.util.CalculationUtil;
+import com.pennant.app.util.CurrencyUtil;
 import com.pennant.app.util.DateUtility;
+import com.pennant.app.util.NumberToEnglishWords;
 import com.pennant.app.util.PathUtil;
 import com.pennant.app.util.ReportCreationUtil;
 import com.pennant.app.util.SessionUserDetails;
@@ -40,9 +44,14 @@ import com.pennant.backend.dao.reports.ReportConfigurationDAO;
 import com.pennant.backend.dao.rulefactory.PostingsDAO;
 import com.pennant.backend.model.agreement.InterestCertificate;
 import com.pennant.backend.model.collateral.CollateralSetup;
+import com.pennant.backend.model.customermasters.CustomerAddres;
 import com.pennant.backend.model.customermasters.CustomerDetails;
+import com.pennant.backend.model.finance.FinExcessAmount;
 import com.pennant.backend.model.finance.FinFeeDetail;
 import com.pennant.backend.model.finance.FinODDetails;
+import com.pennant.backend.model.finance.FinReceiptData;
+import com.pennant.backend.model.finance.FinReceiptDetail;
+import com.pennant.backend.model.finance.FinReceiptHeader;
 import com.pennant.backend.model.finance.FinScheduleData;
 import com.pennant.backend.model.finance.FinServiceInstruction;
 import com.pennant.backend.model.finance.FinanceDetail;
@@ -51,20 +60,26 @@ import com.pennant.backend.model.finance.FinanceMain;
 import com.pennant.backend.model.finance.FinanceScheduleDetail;
 import com.pennant.backend.model.finance.FinanceSummary;
 import com.pennant.backend.model.finance.ForeClosure;
+import com.pennant.backend.model.finance.ForeClosureReport;
+import com.pennant.backend.model.finance.GuarantorDetail;
+import com.pennant.backend.model.finance.JointAccountDetail;
 import com.pennant.backend.model.finance.ManualAdvise;
 import com.pennant.backend.model.finance.ReceiptAllocationDetail;
 import com.pennant.backend.model.reports.ReportConfiguration;
 import com.pennant.backend.model.rulefactory.ReturnDataSet;
 import com.pennant.backend.model.systemmasters.StatementOfAccount;
 import com.pennant.backend.service.collateral.CollateralSetupService;
+import com.pennant.backend.service.customermasters.CustomerDetailsService;
 import com.pennant.backend.service.fees.FeeDetailService;
 import com.pennant.backend.service.finance.FinanceDetailService;
 import com.pennant.backend.service.finance.ReceiptService;
 import com.pennant.backend.service.reports.SOAReportGenerationService;
 import com.pennant.backend.service.systemmasters.InterestCertificateService;
 import com.pennant.backend.util.FinanceConstants;
+import com.pennant.backend.util.PennantApplicationUtil;
 import com.pennant.backend.util.PennantConstants;
 import com.pennant.backend.util.RepayConstants;
+import com.pennant.backend.util.SMTParameterConstants;
 import com.pennant.document.generator.TemplateEngine;
 import com.pennant.ws.exception.ServiceException;
 import com.pennanttech.pennapps.core.model.LoggedInUser;
@@ -93,7 +108,7 @@ public class FinStatementController extends SummaryDetailService {
 	private InterestCertificateService interestCertificateService;
 	private ReportConfigurationDAO reportConfigurationDAO;
 	private ReportConfiguration reportConfiguration;
-
+    private CustomerDetailsService customerDetailsService;
 	/**
 	 * get the FinStatement Details by the given FinReferences.
 	 * 
@@ -160,7 +175,7 @@ public class FinStatementController extends SummaryDetailService {
 	 * @param finreferencecList
 	 * @throws ServiceException
 	 */
-	public FinStatementResponse getStatement(List<String> finReferences, String serviceName, int days) {
+	public FinStatementResponse getStatement(List<String> finReferences, String serviceName, int days, Date fromDate) {
 		logger.debug(Literal.ENTERING);
 
 		FinStatementResponse stmtResponse = new FinStatementResponse();
@@ -190,11 +205,11 @@ public class FinStatementController extends SummaryDetailService {
 				if (StringUtils.equals(APIConstants.STMT_FORECLOSURE, serviceName)) {
 					Cloner cloner = new Cloner();
 					FinanceDetail aFinanceDetail = cloner.deepClone(financeDetail);
-					// get FinODDetails
+					//get FinODDetails
 					List<FinODDetails> finODDetailsList = finODDetailsDAO.getFinODDByFinRef(finReference, null);
 					aFinanceDetail.getFinScheduleData().setFinODDetails(finODDetailsList);
 					financeDetail.getFinScheduleData().setFinODDetails(finODDetailsList);
-					financeDetail = getForeClosureDetails(financeDetail, days);
+					financeDetail = getForeClosureDetails(financeDetail, days, fromDate);
 
 					FinScheduleData finScheduleData = financeDetail.getFinScheduleData();
 					finScheduleData
@@ -204,7 +219,12 @@ public class FinStatementController extends SummaryDetailService {
 					finScheduleData.setFinanceMain(aFinanceDetail.getFinScheduleData().getFinanceMain());
 					finScheduleData.setFinODDetails(aFinanceDetail.getFinScheduleData().getFinODDetails());
 				}
-
+				
+				if (StringUtils.equals(APIConstants.STMT_FORECLOSUREV1, serviceName)) {
+					FinReceiptData receiptData = receiptService.getFinReceiptDataById(finReference,
+							AccountEventConstants.ACCEVENT_EARLYSTL, FinanceConstants.FINSER_EVENT_RECEIPT, "");
+					getForeClosureReport(receiptData, stmtResponse);
+				}
 				// generate response info
 				prepareResponse(financeDetail, serviceName);
 
@@ -240,7 +260,7 @@ public class FinStatementController extends SummaryDetailService {
 	 * @return
 	 * @throws Exception
 	 */
-	private FinanceDetail getForeClosureDetails(FinanceDetail financeDetail, int days) throws Exception {
+	private FinanceDetail getForeClosureDetails(FinanceDetail financeDetail, int days, Date fromDate) throws Exception {
 		logger.debug(Literal.ENTERING);
 
 		FinScheduleData finScheduleData = financeDetail.getFinScheduleData();
@@ -264,10 +284,10 @@ public class FinStatementController extends SummaryDetailService {
 		List<FinFeeDetail> foreClosureFees = new ArrayList<FinFeeDetail>();
 		List<FinFeeDetail> feeDues = new ArrayList<FinFeeDetail>();
 		try {
-			for (int i = 0; i < days; i++) {
+			if (fromDate != null) {
 				Cloner cloner = new Cloner();
 				FinanceDetail aFinanceDetail = cloner.deepClone(financeDetail);
-				serviceInstruction.setFromDate(DateUtility.addDays(DateUtility.getAppDate(), i));
+				serviceInstruction.setFromDate(fromDate);
 				aFinanceDetail = doProcessPayments(aFinanceDetail, serviceInstruction);
 
 				scheduleData.setOutstandingPri(aFinanceDetail.getFinScheduleData().getOutstandingPri());
@@ -275,6 +295,19 @@ public class FinStatementController extends SummaryDetailService {
 				foreClosureFees = aFinanceDetail.getFinScheduleData().getForeClosureFees();
 				foreClosureList.add(aFinanceDetail.getForeClosureDetails().get(0));
 				finOdDetaiList.add(aFinanceDetail.getFinScheduleData().getFinODDetails().get(0));
+			} else {
+				for (int i = 0; i < days; i++) {
+					Cloner cloner = new Cloner();
+					FinanceDetail aFinanceDetail = cloner.deepClone(financeDetail);
+					serviceInstruction.setFromDate(DateUtility.addDays(SysParamUtil.getAppDate(), i));
+					aFinanceDetail = doProcessPayments(aFinanceDetail, serviceInstruction);
+
+					scheduleData.setOutstandingPri(aFinanceDetail.getFinScheduleData().getOutstandingPri());
+					feeDues = aFinanceDetail.getFinScheduleData().getFeeDues();
+					foreClosureFees = aFinanceDetail.getFinScheduleData().getForeClosureFees();
+					foreClosureList.add(aFinanceDetail.getForeClosureDetails().get(0));
+					finOdDetaiList.add(aFinanceDetail.getFinScheduleData().getFinODDetails().get(0));
+				}
 			}
 
 			scheduleData.setFinReference(finReference);
@@ -340,13 +373,14 @@ public class FinStatementController extends SummaryDetailService {
 	public FinStatementResponse getStatement(FinStatementRequest statementRequest, String serviceName) {
 		List<String> references = new ArrayList<String>();
 		references.add(statementRequest.getFinReference());
-		return getStatement(references, serviceName, statementRequest.getDays());
+		return getStatement(references, serviceName, statementRequest.getDays(), statementRequest.getFromDate());
 	}
 
 	private void prepareResponse(FinanceDetail financeDetail, String servicName)
 			throws IllegalAccessException, InvocationTargetException {
 		financeDetail.setFinReference(financeDetail.getFinScheduleData().getFinReference());
 		financeDetail.getFinScheduleData().setFinReference(null);
+		financeDetail.getFinScheduleData().setInsuranceList(null);
 		financeDetail.getFinScheduleData().setStepPolicyDetails(null);
 		financeDetail.getFinScheduleData().setPlanEMIHDates(null);
 		financeDetail.getFinScheduleData().setPlanEMIHmonths(null);
@@ -364,12 +398,12 @@ public class FinStatementController extends SummaryDetailService {
 		financeDetail.setDocumentDetailsList(null);
 		financeDetail.setCollateralAssignmentList(null);
 
-		// disbursement Dates
+		//disbursement Dates
 		List<FinanceDisbursement> disbList = financeDetail.getFinScheduleData().getDisbursementDetails();
 		Collections.sort(disbList, new Comparator<FinanceDisbursement>() {
 			@Override
 			public int compare(FinanceDisbursement b1, FinanceDisbursement b2) {
-				return (Integer.valueOf(b1.getDisbSeq()).compareTo(Integer.valueOf(b2.getDisbSeq())));
+				return (new Integer(b1.getDisbSeq()).compareTo(new Integer(b2.getDisbSeq())));
 			}
 		});
 
@@ -449,8 +483,8 @@ public class FinStatementController extends SummaryDetailService {
 
 		FinScheduleData finScheduleData = financeDetail.getFinScheduleData();
 
-		// Repayments Posting Process Execution
-		// =====================================
+		//Repayments Posting Process Execution
+		//=====================================
 		Date valueDate = finServiceInst.getFromDate();
 
 		List<ReceiptAllocationDetail> allocations = calEarlySettleAmount(finScheduleData, valueDate);
@@ -561,6 +595,367 @@ public class FinStatementController extends SummaryDetailService {
 		return financeDetail;
 	}
 
+	
+	public FinStatementResponse getForeClosureReport(FinReceiptData receiptData,
+			FinStatementResponse finStmtResponse) {
+		logger.debug(Literal.ENTERING);
+		ForeClosureReport closureReport = new ForeClosureReport();
+		try {
+			FinanceDetail finDetails = receiptData.getFinanceDetail();
+			FinanceMain financeMain = finDetails.getFinScheduleData().getFinanceMain();
+			FinReceiptHeader receiptHeader = receiptData.getReceiptHeader();
+			receiptHeader.setReference(financeMain.getFinReference());
+			receiptHeader.setReceiptType(RepayConstants.RECEIPTTYPE_RECIPT);
+			receiptHeader.setRecAgainst(RepayConstants.RECEIPTTO_FINANCE);
+			receiptHeader.setReceiptDate(SysParamUtil.getAppDate());
+			receiptHeader.setReceiptPurpose(FinanceConstants.FINSER_EVENT_EARLYSETTLE);
+			receiptHeader.setAllocationType(RepayConstants.ALLOCATIONTYPE_AUTO);
+			receiptHeader.setNewRecord(true);
+			FinReceiptDetail finReceiptDetail = new FinReceiptDetail();
+			finReceiptDetail.setReceiptType(RepayConstants.RECEIPTTYPE_RECIPT);
+			finReceiptDetail.setPaymentTo(RepayConstants.RECEIPTTO_FINANCE);
+			receiptHeader.getReceiptDetails().add(finReceiptDetail);
+			receiptHeader.setValueDate(SysParamUtil.getAppDate());
+			receiptData.setReceiptHeader(receiptHeader);
+			receiptData.setFinReference(financeMain.getFinReference());
+			receiptData.setBuildProcess("I");
+			receiptData.setValueDate(SysParamUtil.getAppDate());
+			receiptData.setReceiptHeader(receiptHeader);
+			receiptData.setForeClosureEnq(true);
+			receiptData = receiptService.calcuateDues(receiptData);
+
+			// Setting Actual Percentage in Fore closure Letter Report.
+			if (CollectionUtils.isNotEmpty(receiptData.getFinanceDetail().getFinScheduleData().getFinFeeDetailList())) {
+				FinFeeDetail finFeeDetail = receiptData.getFinanceDetail().getFinScheduleData().getFinFeeDetailList()
+						.get(0);
+				closureReport.setActPercentage(finFeeDetail.getActPercentage());
+			}
+
+			if (financeMain != null) {
+				Date applDate = SysParamUtil.getAppDate();
+				String appDate = DateFormatUtils.format(applDate, "dd MMMM yyyy");
+				String disDate = DateFormatUtils.format(financeMain.getFinStartDate(), "dd'th' MMMM yyyy");
+				Date chrgTillDate;
+				int formatter = CurrencyUtil.getFormat(SysParamUtil.getAppCurrency());
+				String finCCy = SysParamUtil.getAppCurrency();
+				int validityDays = SysParamUtil.getValueAsInt(SMTParameterConstants.FORECLOSURE_VALIDITY_DAYS);
+				Date addDays = DateUtility.addDays(applDate, validityDays);
+				String validTill = DateFormatUtils.format(addDays, "dd.MM.yyyy");
+
+				Date prvEmiDate = receiptData.getOrgFinPftDtls().getPrvRpySchDate();
+				chrgTillDate = applDate;
+				int noOfIntDays = DateUtility.getDaysBetween(chrgTillDate, prvEmiDate);
+
+				closureReport.setCalDate(appDate);
+				closureReport.setValidTill(validTill);
+				closureReport.setFinReference(financeMain.getFinReference());
+				closureReport.setVanNumber(financeMain.getVanCode() == null ? "" : financeMain.getVanCode());
+				closureReport.setFinAmount(PennantApplicationUtil.formateAmount(financeMain.getFinAmount(), formatter));
+				closureReport.setFinAmountInWords(NumberToEnglishWords.getAmountInText(
+						PennantApplicationUtil.formateAmount(financeMain.getFinAmount(), formatter), finCCy));
+				closureReport.setFinAssetValue(
+						PennantApplicationUtil.formateAmount(financeMain.getFinAssetValue(), formatter));
+				closureReport.setFinAssetValueInWords(NumberToEnglishWords.getAmountInText(
+						PennantApplicationUtil.formateAmount(financeMain.getFinAssetValue(), formatter), finCCy));
+
+				closureReport.setDisbursalDate(disDate);
+				closureReport.setChrgTillDate(DateFormatUtils.format(chrgTillDate, "MMM  dd,yyyy"));
+				if (finDetails.getCustomerDetails() != null && finDetails.getCustomerDetails().getCustomer() != null) {
+					closureReport.setCustName(finDetails.getCustomerDetails().getCustomer().getCustShrtName());
+					closureReport.setCustCIF(finDetails.getCustomerDetails().getCustomer().getCustCIF());
+					CustomerDetails customerDetails = customerDetailsService
+							.getCustomerDetailsbyIdandPhoneType(finDetails.getCustomerDetails().getCustID(), "MOBILE");
+					CustomerAddres custAdd = customerDetails.getAddressList().stream()
+							.filter(addr -> addr.getCustAddrPriority() == 5).findFirst().orElse(new CustomerAddres());
+
+					String combinedString = null;
+					String custflatnbr = null;
+					if (StringUtils.trimToEmpty(custAdd.getCustFlatNbr()).equals("")) {
+						custflatnbr = " ";
+					} else {
+						custflatnbr = " " + StringUtils.trimToEmpty(custAdd.getCustFlatNbr()) + " ";
+					}
+
+					combinedString = StringUtils.trimToEmpty(custAdd.getCustAddrHNbr()) + " "
+							+ StringUtils.trimToEmpty(custflatnbr) + " "
+							+ StringUtils.trimToEmpty(custAdd.getCustAddrStreet()) + "\n"
+							+ StringUtils.trimToEmpty(custAdd.getLovDescCustAddrCityName()) + "\n"
+							+ StringUtils.trimToEmpty(custAdd.getLovDescCustAddrProvinceName()) + "-"
+							+ StringUtils.trimToEmpty(custAdd.getCustAddrZIP()) + "\n"
+							+ StringUtils.trimToEmpty(custAdd.getLovDescCustAddrCountryName());
+
+					closureReport.setAddress(combinedString);
+
+					closureReport.setCustAddrHNbr(StringUtils.trimToEmpty(custAdd.getCustAddrHNbr()));
+					closureReport.setCustFlatNo(StringUtils.trimToEmpty(custflatnbr));
+					closureReport.setCustAddrStreet(StringUtils.trimToEmpty(custAdd.getCustAddrStreet()));
+					closureReport.setCustAddrCityName(StringUtils.trimToEmpty(custAdd.getLovDescCustAddrCityName()));
+					closureReport
+							.setCustAddrProvinceName(StringUtils.trimToEmpty(custAdd.getLovDescCustAddrProvinceName()));
+					closureReport.setCustAddrZIP(StringUtils.trimToEmpty(custAdd.getCustAddrZIP()));
+					closureReport
+							.setCustAddrCountryName(StringUtils.trimToEmpty(custAdd.getLovDescCustAddrCountryName()));
+
+					String salutation = finDetails.getCustomerDetails().getCustomer()
+							.getLovDescCustSalutationCodeName();
+					String nameString = StringUtils.trimToEmpty(salutation).equals("")
+							? StringUtils.trimToEmpty(closureReport.getCustName())
+							: StringUtils.trimToEmpty(salutation) + " "
+									+ StringUtils.trimToEmpty(closureReport.getCustName());
+					if (CollectionUtils.isNotEmpty(finDetails.getJountAccountDetailList())) {
+						for (JointAccountDetail jointAccountDetail : finDetails.getJountAccountDetailList()) {
+							if (StringUtils.isNotEmpty(nameString)) {
+								nameString = nameString + "\n";
+							}
+
+							if (jointAccountDetail.getCustomerDetails() != null
+									&& jointAccountDetail.getCustomerDetails().getCustomer() != null) {
+								nameString = nameString + (StringUtils
+										.trimToEmpty(jointAccountDetail.getCustomerDetails().getCustomer()
+												.getLovDescCustSalutationCodeName())
+										.equals("")
+												? StringUtils.trimToEmpty(
+														jointAccountDetail.getCustomerDetails().getCustomer()
+																.getCustShrtName())
+												: StringUtils
+														.trimToEmpty(jointAccountDetail.getCustomerDetails()
+																.getCustomer().getLovDescCustSalutationCodeName())
+														+ " " + StringUtils.trimToEmpty(jointAccountDetail
+																.getCustomerDetails().getCustomer().getCustShrtName()));
+							}
+						}
+					}
+					if (CollectionUtils.isNotEmpty(finDetails.getGurantorsDetailList())) {
+						for (GuarantorDetail gurantorsDetail : finDetails.getGurantorsDetailList()) {
+							if (StringUtils.isNotEmpty(nameString)) {
+								nameString = nameString + "\n";
+							}
+							nameString = nameString + "\n"
+									+ StringUtils.trimToEmpty(gurantorsDetail.getGuarantorCIFName());
+						}
+					}
+					closureReport.setNameOftheBorrowers(nameString);
+
+					String custSalutation = finDetails.getCustomerDetails().getCustomer()
+							.getLovDescCustSalutationCodeName();
+					closureReport.setCustSalutation(StringUtils.trimToEmpty(custSalutation));
+
+					List<ReceiptAllocationDetail> receiptAllocationDetails = receiptData.getReceiptHeader()
+							.getAllocationsSummary();
+					Cloner cloner = new Cloner();
+					receiptData.getFinanceDetail().getFinScheduleData()
+							.setFinanceScheduleDetails(finDetails.getFinScheduleData().getFinanceScheduleDetails());
+					FinReceiptData tempReceiptData = cloner.deepClone(receiptData);
+					tempReceiptData.setForeClosureEnq(true);
+					// setOrgReceiptData(tempReceiptData);
+					receiptAllocationDetails = tempReceiptData.getReceiptHeader().getAllocationsSummary();
+
+					BigDecimal receivableAmt = BigDecimal.ZERO;
+					BigDecimal bncCharge = BigDecimal.ZERO;
+					BigDecimal profitAmt = BigDecimal.ZERO;
+					BigDecimal principleAmt = BigDecimal.ZERO;
+					BigDecimal tdsAmt = BigDecimal.ZERO;
+					BigDecimal futTdsAmt = BigDecimal.ZERO;
+
+					for (ReceiptAllocationDetail receiptAllocationDetail : receiptAllocationDetails) {
+
+						// Outstanding Principle
+						if (StringUtils.equals(receiptAllocationDetail.getAllocationType(),
+								RepayConstants.ALLOCATION_FUT_PRI)) {
+							closureReport.setOutstandingPri(PennantApplicationUtil
+									.formateAmount(receiptAllocationDetail.getTotRecv(), formatter));
+							closureReport.setOutstandingPriInWords(
+									NumberToEnglishWords.getAmountInText(PennantApplicationUtil
+											.formateAmount(receiptAllocationDetail.getTotRecv(), formatter), finCCy));
+						}
+
+						// Late Payment Charges
+						if (StringUtils.equals(receiptAllocationDetail.getAllocationType(),
+								RepayConstants.ALLOCATION_ODC)) {
+							closureReport.setLatePayCharges(PennantApplicationUtil
+									.formateAmount(receiptAllocationDetail.getTotRecv(), formatter));
+							closureReport.setLatePayChargesInWords(
+									NumberToEnglishWords.getAmountInText(PennantApplicationUtil
+											.formateAmount(receiptAllocationDetail.getTotRecv(), formatter), finCCy));
+						}
+
+						if (StringUtils.equals(receiptAllocationDetail.getAllocationType(),
+								RepayConstants.ALLOCATION_BOUNCE)) {
+							bncCharge = receiptAllocationDetail.getTotRecv();
+						}
+						// Issue Fixed 141089
+						if (StringUtils.equals(receiptAllocationDetail.getAllocationType(),
+								RepayConstants.ALLOCATION_MANADV)) {
+							receivableAmt = receivableAmt.add(receiptAllocationDetail.getTotRecv());
+						}
+
+						// Interest for the month
+						if (StringUtils.equals(receiptAllocationDetail.getAllocationType(),
+								RepayConstants.ALLOCATION_FUT_PFT)) {
+							closureReport.setInstForTheMonth(PennantApplicationUtil
+									.formateAmount(receiptAllocationDetail.getTotRecv(), formatter));
+							closureReport.setInstForTheMonthInWords(
+									NumberToEnglishWords.getAmountInText(PennantApplicationUtil
+											.formateAmount(receiptAllocationDetail.getTotRecv(), formatter), finCCy));
+						}
+
+						if (StringUtils.equals(receiptAllocationDetail.getAllocationType(),
+								RepayConstants.ALLOCATION_PFT)) {
+							profitAmt = receiptAllocationDetail.getTotRecv();
+						}
+						if (StringUtils.equals(receiptAllocationDetail.getAllocationType(),
+								RepayConstants.ALLOCATION_PRI)) {
+							principleAmt = receiptAllocationDetail.getTotRecv();
+						}
+
+						if (StringUtils.equals(receiptAllocationDetail.getAllocationType(),
+								RepayConstants.ALLOCATION_TDS)) {
+							tdsAmt = receiptAllocationDetail.getTotRecv();
+						}
+						if (StringUtils.equals(receiptAllocationDetail.getAllocationType(),
+								RepayConstants.ALLOCATION_FUT_TDS)) {
+							futTdsAmt = receiptAllocationDetail.getTotRecv();
+						}
+						if (StringUtils.equals(receiptAllocationDetail.getAllocationType(),
+								RepayConstants.ALLOCATION_FEE)) {
+							BigDecimal fcFeeAmtWithGst = receiptAllocationDetail.getTotRecv();
+							BigDecimal gstAmt = receiptAllocationDetail.getDueGST();
+							BigDecimal fcFeeAmtWithoutGst = fcFeeAmtWithGst.subtract(gstAmt);
+							BigDecimal foreClosureFee = closureReport.getForeClosFees().add(fcFeeAmtWithGst);
+							closureReport
+									.setForeClosFees(PennantApplicationUtil.formateAmount(foreClosureFee, formatter));
+							closureReport.setForeClosFeesInWords(NumberToEnglishWords.getAmountInText(
+									PennantApplicationUtil.formateAmount(foreClosureFee, formatter), finCCy));
+							// GHF Calculate 18% GST on foreclosure fees
+							closureReport.setGstOnForeClosFees((PennantApplicationUtil
+									.formateAmount(fcFeeAmtWithoutGst, formatter).multiply(new BigDecimal(18)))
+											.divide(BigDecimal.valueOf(100), 0, RoundingMode.HALF_DOWN));
+							closureReport.setForeClosFeesExGST(
+									closureReport.getForeClosFees().subtract(closureReport.getGstOnForeClosFees()));
+
+							closureReport.setGstOnForeClosFees(closureReport.getGstOnForeClosFees());
+						}
+
+					}
+					// Other Charges
+					closureReport.setManualAdviceAmt(PennantApplicationUtil.formateAmount(receivableAmt, formatter));
+
+					// Cheque Bounce Charges
+					closureReport.setCheqBncCharges(PennantApplicationUtil.formateAmount(bncCharge, formatter));
+					closureReport.setCheqBncChargesInWords(NumberToEnglishWords
+							.getAmountInText(PennantApplicationUtil.formateAmount(bncCharge, formatter), finCCy));
+
+					// Pending Installments
+					closureReport.setPrincipalAmt(PennantApplicationUtil.formateAmount(principleAmt, formatter));
+					closureReport.setInterestAmt(PennantApplicationUtil.formateAmount(profitAmt, formatter));
+					closureReport.setPendingInsts(
+							PennantApplicationUtil.formateAmount(profitAmt.add(principleAmt), formatter));
+
+					// TDS
+					closureReport.setTds(PennantApplicationUtil.formateAmount(tdsAmt.add(futTdsAmt), formatter));
+
+					List<FinExcessAmount> excessList = receiptData.getReceiptHeader().getExcessAmounts();
+
+					// Refunds (Excess Amount + EMI in advance)
+					BigDecimal refund = BigDecimal.ZERO;
+					for (FinExcessAmount finExcessAmount : excessList) {
+						refund = refund.add(finExcessAmount.getBalanceAmt());
+					}
+					closureReport.setRefund(PennantApplicationUtil.formateAmount(refund, formatter));
+
+					// Advance EMI
+					for (FinExcessAmount finExcessAmount : excessList) {
+						if (StringUtils.equals(finExcessAmount.getAmountType(), RepayConstants.EXAMOUNTTYPE_EMIINADV)) {
+							closureReport.setAdvInsts(
+									PennantApplicationUtil.formateAmount(finExcessAmount.getBalanceAmt(), formatter));
+						}
+					}
+					closureReport.setTotalDues(closureReport.getLatePayCharges().add(closureReport.getPendingInsts())
+							.add(closureReport.getCheqBncCharges()).add(closureReport.getOutstandingPri())
+							.add(closureReport.getInstForTheMonth())
+							.add(closureReport.getForeClosFees().add(closureReport.getManualAdviceAmt()))
+							.subtract(closureReport.getTds()).subtract(closureReport.getTotWaiver()));
+					if (noOfIntDays > 0) {
+						closureReport.setIntPerday(
+								closureReport.getInstForTheMonth().divide(new BigDecimal(noOfIntDays), 2));
+					}
+
+					// Charges Inclusive of GST
+					closureReport.setChargesIncGST(closureReport.getLatePayCharges()
+							.add(closureReport.getCheqBncCharges()).add(closureReport.getManualAdviceAmt()));
+					closureReport.setChargesIncGSTInWords(NumberToEnglishWords
+							.getAmountInText((closureReport.getLatePayCharges().add(closureReport.getCheqBncCharges())
+									.add(closureReport.getManualAdviceAmt())), finCCy));
+
+					// Issue Fixed 141142
+					List<ManualAdvise> payableList = receiptData.getReceiptHeader().getPayableAdvises();
+					BigDecimal payableAmt = BigDecimal.ZERO;
+					for (ManualAdvise manualAdvise : payableList) {
+						payableAmt = payableAmt.add(manualAdvise.getBalanceAmt());
+					}
+
+					// Other Refunds (All payable Advise)
+					closureReport.setOtherRefunds(PennantApplicationUtil.formateAmount(payableAmt, formatter));
+					closureReport.setOtherRefundsInWords(NumberToEnglishWords
+							.getAmountInText(PennantApplicationUtil.formateAmount(payableAmt, formatter), finCCy));
+
+					// Refunds + other Refunds
+					closureReport.setTotalRefunds(closureReport.getRefund().add(closureReport.getOtherRefunds()));
+					closureReport.setTotalRefundsInWords(
+							NumberToEnglishWords.getAmountInText(closureReport.getTotalRefunds(), finCCy));
+
+					// Net Receivable
+					int format = 0;
+					closureReport.setNetReceivable(
+							closureReport.getTotalDues().subtract(closureReport.getTotalRefunds()).abs());
+					BigDecimal netAmtRecievable = PennantApplicationUtil
+							.unFormateAmount(closureReport.getNetReceivable(), format);
+					closureReport
+							.setNetReceivableInWords(NumberToEnglishWords.getAmountInText(netAmtRecievable, finCCy));
+
+					if ((closureReport.getTotalDues().subtract(closureReport.getTotalRefunds()))
+							.compareTo(BigDecimal.ZERO) < 0) {
+						closureReport.setTotal("Net Payable");
+					} else {
+						closureReport.setTotal("Net Receivable");
+					}
+
+					int defaultDays = 7;
+					int noOfdays = DateUtility.getDaysBetween(chrgTillDate, financeMain.getMaturityDate());
+					if (defaultDays >= noOfdays) {
+						defaultDays = noOfdays;
+					}
+
+					List<FinanceMain> financeMainList = financeDetailService
+							.getFinanceMainForLinkedLoans(financeMain.getFinReference());
+					StringBuilder linkedFinRef = new StringBuilder(" ");
+					if (financeMainList != null) {
+						for (FinanceMain finance : financeMainList) {
+							if (!finance.getFinReference().equals(closureReport.getFinReference())) {
+								linkedFinRef.append(" " + finance.getFinReference());
+								linkedFinRef.append(",");
+							}
+						}
+						linkedFinRef.setLength(linkedFinRef.length() - 1);
+					}
+
+					// Linked Loan Reference
+					closureReport.setLinkedFinRef(linkedFinRef.toString());
+
+					closureReport.setEntityDesc(financeMain.getEntityDesc());
+					finStmtResponse.setForeclosureReport(closureReport);
+				}
+			}
+		} catch (Exception e) {
+			finStmtResponse = new FinStatementResponse();
+			finStmtResponse.setReturnStatus(APIErrorHandlerService.getFailedStatus());
+			logger.debug(Literal.LEAVING);
+			return finStmtResponse;
+		}
+		logger.debug(Literal.LEAVING);
+		return finStmtResponse;
+	}
+	
 	/**
 	 * Method for fetch Schedule Date against the presentment bounce charge
 	 * 
@@ -576,6 +971,9 @@ public class FinStatementController extends SummaryDetailService {
 	 */
 	private List<ReceiptAllocationDetail> calEarlySettleAmount(FinScheduleData finScheduleData, Date valueDate) {
 		logger.debug(Literal.ENTERING);
+
+		String TDS_ROUNDING_MODE = SysParamUtil.getValueAsString(CalculationConstants.TDS_ROUNDINGMODE);
+		int TDS_ROUNDING_TARGET = SysParamUtil.getValueAsInt(CalculationConstants.TDS_ROUNDINGTARGET);
 
 		BigDecimal tdsMultiplier = BigDecimal.ONE;
 		if (finScheduleData.getFinanceMain().isTDSApplicable()) {
@@ -616,7 +1014,9 @@ public class FinStatementController extends SummaryDetailService {
 				if (finScheduleData.getFinanceMain().isTDSApplicable()) {
 					BigDecimal pft = curSchd.getProfitSchd().subtract(curSchd.getSchdPftPaid());
 					BigDecimal actualPft = pft.divide(tdsMultiplier, 0, RoundingMode.HALF_DOWN);
-					tdsAccruedTillNow = tdsAccruedTillNow.add(pft.subtract(actualPft));
+					BigDecimal tds = pft.subtract(actualPft);
+					tds = CalculationUtil.roundAmount(tds, TDS_ROUNDING_MODE, TDS_ROUNDING_TARGET);
+					tdsAccruedTillNow = tdsAccruedTillNow.add(tds);
 				}
 
 			} else if (DateUtil.compare(valueDate, schdDate) == 0) {
@@ -632,7 +1032,9 @@ public class FinStatementController extends SummaryDetailService {
 
 				if (finScheduleData.getFinanceMain().isTDSApplicable()) {
 					BigDecimal actualPft = remPft.divide(tdsMultiplier, 0, RoundingMode.HALF_DOWN);
-					tdsAccruedTillNow = tdsAccruedTillNow.add(remPft.subtract(actualPft));
+					BigDecimal tds = remPft.subtract(actualPft);
+					tds = CalculationUtil.roundAmount(tds, TDS_ROUNDING_MODE, TDS_ROUNDING_TARGET);
+					tdsAccruedTillNow = tdsAccruedTillNow.add(tds);
 				}
 				partAccrualReq = false;
 
@@ -652,8 +1054,9 @@ public class FinStatementController extends SummaryDetailService {
 					if (finScheduleData.getFinanceMain().isTDSApplicable()) {
 						BigDecimal actualPft = (accruedPft.add(prvSchd.getProfitBalance())).divide(tdsMultiplier, 0,
 								RoundingMode.HALF_DOWN);
-						tdsAccruedTillNow = tdsAccruedTillNow
-								.add(accruedPft.add(prvSchd.getProfitBalance()).subtract(actualPft));
+						BigDecimal tds = accruedPft.add(prvSchd.getProfitBalance()).subtract(actualPft);
+						tds = CalculationUtil.roundAmount(tds, TDS_ROUNDING_MODE, TDS_ROUNDING_TARGET);
+						tdsAccruedTillNow = tdsAccruedTillNow.add(tds);
 					}
 				}
 			}
@@ -754,10 +1157,10 @@ public class FinStatementController extends SummaryDetailService {
 	 * @return stmtResponse
 	 */
 	public FinStatementResponse getReportSatatement(FinStatementRequest statementRequest) {
-		// TODO FIXME
+		//TODO FIXME
 		logger.debug(Literal.ENTERING);
 
-		// Temporary FIX
+		//Temporary FIX
 		FinStatementResponse stmtResponse;
 		try {
 			String finRefernce = statementRequest.getFinReference();
@@ -774,11 +1177,17 @@ public class FinStatementController extends SummaryDetailService {
 					String envVariable = System.getenv("APP_ROOT_PATH");
 					PathUtil.setRootPath(envVariable);
 					StatementOfAccount soa = soaReportGenerationService.getStatmentofAccountDetails(finReference,
-							fromdate, todate, true);
+							fromdate, todate, false);
 
 					List<Object> list = new ArrayList<Object>();
+
 					list.add(soa.getSoaSummaryReports());
 					list.add(soa.getTransactionReports());
+					list.add(soa.getApplicantDetails());
+					list.add(soa.getOtherFinanceDetails());
+					list.add(soa.getSheduleReports());
+					list.add(soa.getInterestRateDetails());
+
 					String reportSrc = PathUtil.getPath(PathUtil.REPORTS_FINANCE) + "/" + reportName + ".jasper";
 					LoggedInUser userDetails = SessionUserDetails.getUserDetails(SessionUserDetails.getLogiedInUser());
 					String userName = userDetails.getUserName();
@@ -788,8 +1197,7 @@ public class FinStatementController extends SummaryDetailService {
 					if (document != null) {
 						String location = null;
 						if (StringUtils.equals(statementRequest.getType(), APIConstants.REPORT_SOA)) {
-							// location = moveToS3Bucket(document, finReference, statementRequest.getType(),
-							// soa.getFinDivision());
+							//location = moveToS3Bucket(document, finReference, statementRequest.getType(), soa.getFinDivision());
 						}
 						stmtResponse = new FinStatementResponse();
 
@@ -802,7 +1210,7 @@ public class FinStatementController extends SummaryDetailService {
 						if (StringUtils.isNotBlank(location)) {
 							logger.debug("prepare response");
 							stmtResponse.setFinReference(finReference);
-							// stmtResponse.setLocation(location);
+							//stmtResponse.setLocation(location);
 							stmtResponse.setReturnStatus(APIErrorHandlerService.getSuccessStatus());
 						} else {
 							stmtResponse.setReturnStatus(APIErrorHandlerService.getFailedStatus());
@@ -857,8 +1265,7 @@ public class FinStatementController extends SummaryDetailService {
 				if (StringUtils.equals(statementRequest.getType(), APIConstants.REPORT_SOA)
 						|| StringUtils.equals(statementRequest.getType(), APIConstants.STMT_REPAY_SCHD)
 						|| StringUtils.equals(statementRequest.getType(), APIConstants.STMT_NOC)) {
-					// location = moveToS3Bucket(document, statementRequest.getFinReference(),
-					// statementRequest.getType(), null);
+					//location = moveToS3Bucket(document, statementRequest.getFinReference(), statementRequest.getType(), null);
 				}
 
 				if (StringUtils.equals(statementRequest.getType(), APIConstants.STMT_NOC_REPORT)
@@ -872,7 +1279,7 @@ public class FinStatementController extends SummaryDetailService {
 
 				if (StringUtils.isNotBlank(location)) {
 					stmtResponse.setFinReference(statementRequest.getFinReference());
-					// stmtResponse.setLocation(location);
+					//stmtResponse.setLocation(location);
 					stmtResponse.setReturnStatus(APIErrorHandlerService.getSuccessStatus());
 				} else {
 					stmtResponse.setReturnStatus(APIErrorHandlerService.getFailedStatus());
@@ -894,6 +1301,24 @@ public class FinStatementController extends SummaryDetailService {
 		}
 	}
 
+	private String getAddress(String seperator, String... values) {
+		StringBuilder builder = new StringBuilder();
+
+		for (String value : values) {
+			if (StringUtils.isEmpty(value)) {
+				continue;
+			}
+
+			if (builder.length() > 0) {
+				builder.append(seperator);
+			}
+
+			builder.append(builder);
+		}
+
+		return builder.toString();
+	}
+
 	/**
 	 * This method generates a {@link ByteArrayOutputStream}, compatible for re-use
 	 * 
@@ -905,37 +1330,37 @@ public class FinStatementController extends SummaryDetailService {
 
 		ByteArrayOutputStream stream = null;
 		Date fromdate = statementRequest.getFromDate();
-		String startDate = null;
-		String endDate = null;
+		Date startDate = null;
+		Date endDate = null;
 
+		int year = 0;
+		Date appDate = SysParamUtil.getAppDate();
 		if (fromdate != null) {
-			int year = DateUtility.getYear(fromdate);
-			startDate = "1/4/" + year;
-			endDate = "31/3/" + (year + 1);
+			year = DateUtility.getYear(fromdate);
 		} else {
-			startDate = "1/4/" + DateUtility.getYear(DateUtility.getAppDate());
-			endDate = "31/3/" + (DateUtility.getYear(DateUtility.getAppDate()) + 1);
+			year = DateUtil.getYear(appDate);
 		}
 
-		InterestCertificate interestCertificate = null;
+		startDate = DateUtil.getDate(year, 3, 1);
+		endDate = DateUtil.getDate(year + 1, 2, 31);
+
+		InterestCertificate intCert = null;
 		try {
-			interestCertificate = interestCertificateService
-					.getInterestCertificateDetails(statementRequest.getFinReference(), startDate, endDate, false);
+			intCert = interestCertificateService.getInterestCertificateDetails(statementRequest.getFinReference(),
+					startDate, endDate, false);
 		} catch (ParseException e) {
 			logger.error("Unable to retrieve model from service");
 		}
-		if (interestCertificate == null) {
+		if (intCert == null) {
 			logger.error("Empty Model");
 		}
 
-		Date appldate = DateUtility.getAppDate();
-		String appDate = DateUtility.formatToLongDate(appldate);
-		interestCertificate.setAppDate(appDate);
-		interestCertificate.setFinStartDate(startDate);
-		interestCertificate.setFinEndDate(endDate);
-		interestCertificate.setFinPostDate(DateUtility.getAppDate());
+		intCert.setAppDate(DateUtil.formatToLongDate(appDate));
+		intCert.setFinStartDate(DateUtil.formatToShortDate(startDate));
+		intCert.setFinEndDate(DateUtil.formatToShortDate(endDate));
+		intCert.setFinPostDate(appDate);
 
-		Method[] methods = interestCertificate.getClass().getDeclaredMethods();
+		Method[] methods = intCert.getClass().getDeclaredMethods();
 
 		for (Method property : methods) {
 			if (property.getName().startsWith("get")) {
@@ -943,7 +1368,7 @@ public class FinStatementController extends SummaryDetailService {
 				Object value;
 
 				try {
-					value = property.invoke(interestCertificate);
+					value = property.invoke(intCert);
 				} catch (Exception e) {
 					continue;
 				}
@@ -951,44 +1376,35 @@ public class FinStatementController extends SummaryDetailService {
 				if (value == null) {
 					try {
 						String stringParameter = "";
-						interestCertificate.getClass().getMethod("set" + field, new Class[] { String.class })
-								.invoke(interestCertificate, stringParameter);
+						intCert.getClass().getMethod("set" + field, new Class[] { String.class }).invoke(intCert,
+								stringParameter);
 					} catch (Exception e) {
 						logger.error(Literal.EXCEPTION, e);
 					}
 				}
 			}
 		}
-		String combinedString = null;
-		String custflatnbr = null;
-		if (interestCertificate.getCustFlatNbr().equals("")) {
-			custflatnbr = " ";
-		} else {
-			custflatnbr = " " + interestCertificate.getCustFlatNbr() + "\n";
-		}
-		if (StringUtils.equals(statementRequest.getType(), APIConstants.STMT_PROV_INST_CERT_REPORT)) {
-			combinedString = interestCertificate.getCustAddrHnbr() + custflatnbr
-					+ interestCertificate.getCustAddrStreet() + "\n" + interestCertificate.getCustAddrCity() + "\n"
-					+ interestCertificate.getCustAddrState() + " " + interestCertificate.getCustAddrZIP() + "\n"
-					+ interestCertificate.getCountryDesc() + "\n" + interestCertificate.getCustEmail() + "\n"
-					+ interestCertificate.getCustPhoneNumber();
-			interestCertificate.setCustAddrHnbr(combinedString);
+
+		String address = getAddress("\n", intCert.getCustAddrHnbr(), intCert.getCustFlatNbr(),
+				intCert.getCustAddrStreet(), intCert.getCustAddrCity(), intCert.getCustAddrState(),
+				intCert.getCustAddrZIP(), intCert.getCountryDesc());
+
+		String certType = statementRequest.getType();
+		if (APIConstants.STMT_PROV_INST_CERT_REPORT.equals(certType)) {
+			address = getAddress("\n", address, intCert.getCustEmail(), intCert.getCustPhoneNumber());
+			intCert.setCustAddress(address);
 		}
 
-		if (StringUtils.equals(statementRequest.getType(), APIConstants.STMT_INST_CERT_REPORT)) {
-			combinedString = interestCertificate.getCustAddrHnbr() + custflatnbr
-					+ interestCertificate.getCustAddrStreet() + "\n" + interestCertificate.getCustAddrCity() + "\n"
-					+ interestCertificate.getCustAddrState() + " " + interestCertificate.getCustAddrZIP() + "\n"
-					+ interestCertificate.getCountryDesc();
-			interestCertificate.setCustAddrHnbr(combinedString);
+		if (APIConstants.STMT_INST_CERT_REPORT.equals(certType)) {
+			intCert.setCustAddress(address);
 		}
 
 		String agreement = null;
-		if (StringUtils.equals(statementRequest.getType(), APIConstants.STMT_PROV_INST_CERT_REPORT)) {
+		if (APIConstants.STMT_PROV_INST_CERT_REPORT.equals(certType)) {
 			agreement = "ProvisionalCertificate.docx";
 		}
 
-		if (StringUtils.equals(statementRequest.getType(), APIConstants.STMT_INST_CERT_REPORT)) {
+		if (APIConstants.STMT_INST_CERT_REPORT.equals(certType)) {
 			agreement = "InterestCertificate.docx";
 		}
 
@@ -998,7 +1414,7 @@ public class FinStatementController extends SummaryDetailService {
 			engine = new TemplateEngine(templatePath, templatePath);
 			engine.setTemplate(agreement);
 			engine.loadTemplate();
-			engine.mergeFields(interestCertificate);
+			engine.mergeFields(intCert);
 
 			stream = new ByteArrayOutputStream();
 			engine.getDocument().save(stream, SaveFormat.PDF);
@@ -1055,7 +1471,7 @@ public class FinStatementController extends SummaryDetailService {
 		reportArgumentsMap.put("reportHeading", reportConfiguration.getReportHeading());
 		reportArgumentsMap.put("reportGeneratedBy", "Report Generated by penApps PFF");// Labels.getLabel("Reports_footer_ReportGeneratedBy.lable"));
 		reportArgumentsMap.put("appDate", DateUtility.getAppDate());
-		reportArgumentsMap.put("appCcy", SysParamUtil.getValueAsString("APP_DFT_CURR"));
+		reportArgumentsMap.put("appCcy", SysParamUtil.getAppCurrency());
 		reportArgumentsMap.put("appccyEditField", SysParamUtil.getValueAsInt(PennantConstants.LOCAL_CCY_FORMAT));
 		reportArgumentsMap.put("unitParam", "PFF");
 
@@ -1163,6 +1579,10 @@ public class FinStatementController extends SummaryDetailService {
 
 	public void setInterestCertificateService(InterestCertificateService interestCertificateService) {
 		this.interestCertificateService = interestCertificateService;
+	}
+
+	public void setCustomerDetailsService(CustomerDetailsService customerDetailsService) {
+		this.customerDetailsService = customerDetailsService;
 	}
 
 }
