@@ -11,9 +11,11 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.lang.StringUtils;
 import org.apache.cxf.phase.PhaseInterceptorChain;
-import org.apache.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.jaxen.JaxenException;
 
 import com.pennant.app.constants.AccountEventConstants;
@@ -40,6 +42,7 @@ import com.pennant.backend.model.extendedfield.ExtendedFieldData;
 import com.pennant.backend.model.extendedfield.ExtendedFieldRender;
 import com.pennant.backend.model.finance.FinFeeDetail;
 import com.pennant.backend.model.finance.FinODDetails;
+import com.pennant.backend.model.finance.FinPlanEmiHoliday;
 import com.pennant.backend.model.finance.FinScheduleData;
 import com.pennant.backend.model.finance.FinanceDetail;
 import com.pennant.backend.model.finance.FinanceDisbursement;
@@ -61,11 +64,12 @@ import com.pennanttech.pennapps.core.InterfaceException;
 import com.pennanttech.pennapps.core.model.ErrorDetail;
 import com.pennanttech.pennapps.core.model.LoggedInUser;
 import com.pennanttech.util.APIConstants;
+import com.pennanttech.ws.model.finance.EmiResponse;
 import com.pennanttech.ws.service.APIErrorHandlerService;
 
 public class FinanceDetailController extends SummaryDetailService {
 
-	private static final Logger logger = Logger.getLogger(FinanceDetailController.class);
+	private static final Logger logger = LogManager.getLogger(FinanceDetailController.class);
 
 	private FinanceDetailService financeDetailService;
 	private StepPolicyDetailDAO stepPolicyDetailDAO;
@@ -173,10 +177,10 @@ public class FinanceDetailController extends SummaryDetailService {
 				AuditHeader auditHeader = new AuditHeader(afinanceDetail.getFinScheduleData().getFinReference(), null,
 						null, null, auditDetail, financeMain.getUserDetails(),
 						new HashMap<String, ArrayList<ErrorDetail>>());
-				// get the header details from the request
+				//get the header details from the request
 				APIHeader reqHeaderDetails = (APIHeader) PhaseInterceptorChain.getCurrentMessage().getExchange()
 						.get(APIHeader.API_HEADER_KEY);
-				// set the headerDetails to AuditHeader
+				//set the headerDetails to AuditHeader
 				auditHeader.setApiHeader(reqHeaderDetails);
 				// save the finance details into main table
 				auditHeader = getFinanceDetailService().doApprove(auditHeader, true);
@@ -328,10 +332,10 @@ public class FinanceDetailController extends SummaryDetailService {
 					feeDetail.setFixedAmount(vasRecording.getFee());
 					feeDetail.setAlwDeviation(true);
 					feeDetail.setMaxWaiverPerc(BigDecimal.valueOf(100));
-					// feeDetail.setAlwModifyFee(true);
+					//feeDetail.setAlwModifyFee(true);
 					feeDetail.setAlwModifyFeeSchdMthd(true);
 					feeDetail.setCalculationType(PennantConstants.FEE_CALCULATION_TYPE_FIXEDAMOUNT);
-					// Fee Details set to the VasRecording
+					//Fee Details set to the VasRecording
 					vasRecording.setWaivedAmt(feeDetail.getWaivedAmount());
 					vasRecording.setPaidAmt(feeDetail.getPaidAmount());
 				}
@@ -340,10 +344,10 @@ public class FinanceDetailController extends SummaryDetailService {
 		// fetch finType fees details
 		String finEvent = "";
 		boolean enquiry = true;
-		if (financeDetail.getFinScheduleData().getFinFeeDetailList() != null) {
+		if (CollectionUtils.isNotEmpty(financeDetail.getFinScheduleData().getFinFeeDetailList())) {
 			enquiry = false;
 		}
-		feeDetailService.doExecuteFeeCharges(financeDetail, finEvent, null, enquiry);
+		executeFeeCharges(financeDetail, finEvent, enquiry);
 
 		// Step Policy Details
 		if (financeMain.isStepFinance()) {
@@ -374,7 +378,7 @@ public class FinanceDetailController extends SummaryDetailService {
 				Collections.sort(finStepDetails, new Comparator<FinanceStepPolicyDetail>() {
 					@Override
 					public int compare(FinanceStepPolicyDetail b1, FinanceStepPolicyDetail b2) {
-						return (Integer.valueOf(b1.getStepNo()).compareTo(Integer.valueOf(b2.getStepNo())));
+						return (new Integer(b1.getStepNo()).compareTo(new Integer(b2.getStepNo())));
 					}
 				});
 				// method for prepare step installments
@@ -382,7 +386,7 @@ public class FinanceDetailController extends SummaryDetailService {
 			}
 		}
 
-		finScheduleData.getFinanceMain().setCalculateRepay(true);// FIXME: why this field
+		finScheduleData.getFinanceMain().setCalculateRepay(true);//FIXME: why this field
 
 		// Disbursement details
 		FinanceDisbursement disbursementDetails = new FinanceDisbursement();
@@ -398,6 +402,24 @@ public class FinanceDetailController extends SummaryDetailService {
 		finScheduleData.getDisbursementDetails().add(disbursementDetails);
 
 		logger.debug("Leaving");
+	}
+
+	private void executeFeeCharges(FinanceDetail financeDetail, String eventCode, boolean enquiry)
+			throws IllegalAccessException, InvocationTargetException {
+		FinScheduleData schData = financeDetail.getFinScheduleData();
+		if (CollectionUtils.isEmpty(schData.getFinFeeDetailList())) {
+			if (StringUtils.isBlank(eventCode)) {
+				eventCode = PennantApplicationUtil.getEventCode(schData.getFinanceMain().getFinStartDate());
+			}
+			feeDetailService.doProcessFeesForInquiry(financeDetail, eventCode, null, enquiry);
+		} else {
+			feeDetailService.doExecuteFeeCharges(financeDetail, eventCode, null, enquiry);
+		}
+		if (financeDetail.isStp()) {
+			for (FinFeeDetail feeDetail : schData.getFinFeeDetailList()) {
+				feeDetail.setWorkflowId(0);
+			}
+		}
 	}
 
 	/**
@@ -451,9 +473,9 @@ public class FinanceDetailController extends SummaryDetailService {
 			// set fee paid amounts based on schedule method
 			finScheduleData.setFinFeeDetailList(getUpdatedFees(finScheduleData.getFinFeeDetailList()));
 
-			// summary
+			//summary
 			FinanceDetail response = new FinanceDetail();
-			// used for AEAMOUNTS class
+			//used for AEAMOUNTS class 
 			response.setFinReference(financeMain.getFinReference());
 			financeMain.setRecordType(PennantConstants.RECORD_TYPE_NEW);
 			;
@@ -478,6 +500,7 @@ public class FinanceDetailController extends SummaryDetailService {
 		response.setRepayInstructions(null);
 		response.setRateInstruction(null);
 		response.setFinFeeDetailList(null);
+		response.setInsuranceList(null);
 		response.setStepPolicyDetails(null);
 		response.setFinanceScheduleDetails(null);
 		response.setPlanEMIHDates(null);
@@ -509,12 +532,12 @@ public class FinanceDetailController extends SummaryDetailService {
 
 			if (financeDetail != null) {
 				FinanceMain financeMain = financeDetail.getFinScheduleData().getFinanceMain();
-				// setting Disb first and lastDates
+				//setting Disb first and lastDates
 				List<FinanceDisbursement> disbList = financeDetail.getFinScheduleData().getDisbursementDetails();
 				Collections.sort(disbList, new Comparator<FinanceDisbursement>() {
 					@Override
 					public int compare(FinanceDisbursement b1, FinanceDisbursement b2) {
-						return (Integer.valueOf(b1.getDisbSeq()).compareTo(Integer.valueOf(b2.getDisbSeq())));
+						return (new Integer(b1.getDisbSeq()).compareTo(new Integer(b2.getDisbSeq())));
 					}
 				});
 
@@ -528,8 +551,7 @@ public class FinanceDetailController extends SummaryDetailService {
 					}
 				}
 
-				// Avoid Grace Period details into the marshaling in case of Allow grace is
-				// false
+				// Avoid Grace Period details into the marshaling in case of Allow grace is false
 				if (!financeMain.isAllowGrcPeriod()) {
 					financeMain.setGrcPeriodEndDate(null);
 					financeMain.setGrcRateBasis(null);
@@ -548,6 +570,9 @@ public class FinanceDetailController extends SummaryDetailService {
 					financeMain.setGrcSchdMthd(null);
 					financeMain.setGrcMinRate(null);
 					financeMain.setGrcMaxRate(null);
+					financeMain.setGrcAdvPftRate(null);
+					financeMain.setGrcAdvBaseRate(null);
+					financeMain.setGrcAdvMargin(null);
 				}
 
 				// Summary details
@@ -556,7 +581,7 @@ public class FinanceDetailController extends SummaryDetailService {
 				response.setFinFeeDetailList(getUpdatedFees(response.getFinFeeDetailList()));
 				response.setFinanceSummary(getFinanceSummary(financeDetail));
 				response.setReturnStatus(APIErrorHandlerService.getSuccessStatus());
-				// get FinODDetails
+				//get FinODDetails
 				List<FinODDetails> finODDetailsList = finODDetailsDAO.getFinODDByFinRef(finReference, null);
 				response.setFinODDetails(finODDetailsList);
 				// to remove un-necessary objects from response make them as null
@@ -576,6 +601,44 @@ public class FinanceDetailController extends SummaryDetailService {
 
 		logger.debug("Leaving");
 		return response;
+	}
+
+	public EmiResponse getEMIAmount(FinanceDetail finDetail) {
+		logger.debug("Enteing");
+		EmiResponse response = new EmiResponse();
+		try {
+			FinanceMain finMain = finDetail.getFinScheduleData().getFinanceMain();
+
+			finMain.setMaturityDate(finMain.getCalMaturity());
+
+			doSetRequiredData(finDetail.getFinScheduleData());
+
+			List<Integer> planEMIHmonths = new ArrayList<Integer>();
+			if (CollectionUtils.isNotEmpty(finDetail.getFinScheduleData().getApiPlanEMIHmonths())
+					&& StringUtils.equals(finDetail.getFinScheduleData().getFinanceMain().getPlanEMIHMethod(),
+							FinanceConstants.PLANEMIHMETHOD_FRQ)) {
+				for (FinPlanEmiHoliday detail : finDetail.getFinScheduleData().getApiPlanEMIHmonths()) {
+					planEMIHmonths.add(detail.getPlanEMIHMonth());
+				}
+			}
+
+			finDetail.getFinScheduleData().setPlanEMIHmonths(planEMIHmonths);
+
+			BigDecimal repayAmount = ScheduleCalculator.getEMIOnFinAssetValue(finDetail);
+
+			if (repayAmount.compareTo(BigDecimal.ZERO) > 0) {
+				response.setRepayAmount(repayAmount);
+				response.setReturnStatus(APIErrorHandlerService.getSuccessStatus());
+			}
+		} catch (Exception e) {
+			logger.error("Exception", e);
+			response.setReturnStatus(APIErrorHandlerService.getFailedStatus());
+			return response;
+		}
+		logger.debug("Leaving");
+
+		return response;
+
 	}
 
 	public FinanceDetailService getFinanceDetailService() {
